Fix the spacing around the topbar.

--- a/app/assets/stylesheets/controller-specific/projects.css.scss
+++ b/app/assets/stylesheets/controller-specific/projects.css.scss
@@ -1,7 +1,3 @@
-body {
-   padding-top: 40px;
-}
-
 .container > footer p {
     text-align: center; /* center align it with the container */
 }
